# openclaw-autorouter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bench.py  config.yaml.example  docker-compose.yml  entrypoint.sh  openclaw-autorouter-design.md  pyproject.toml
src/: classifier.py  main.py  ollama_state.py  router.py  stats.py
tests/: test_classifier.py  test_router.py  test_stats.py
