[project]
name = "openclaw-autorouter"
version = "2.0.0"
description = "LLM routing proxy for OpenClaw with auto-classification"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"bench.py" = ["T20", "S603", "S607", "S310", "E501"]
"src/main.py" = ["S101"]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "bench"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
